boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_renders_async_class_methods.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"exports/async_class_methods\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo

import kotlinx.coroutines.launch
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_release_class_demo_engine(handle: Long): Unit
    @JvmStatic external fun boltffi_init_class_demo_engine_new(): Long
    @JvmStatic external fun boltffi_method_class_demo_engine_compute(`receiver`: Long, value: Int): Long
    @JvmStatic external fun boltffi_async_method_class_demo_engine_compute_poll(handle: Long, callback_data: Long): Unit
    @JvmStatic external fun boltffi_async_method_class_demo_engine_compute_complete(handle: Long): Int
    @JvmStatic external fun boltffi_async_method_class_demo_engine_compute_cancel(handle: Long): Unit
    @JvmStatic external fun boltffi_async_method_class_demo_engine_compute_free(handle: Long): Unit
    @JvmStatic external fun boltffi_async_method_class_demo_engine_compute_panic_message(handle: Long): ByteArray?

    @JvmStatic fun boltffiFutureContinuationCallback(handle: Long, pollResult: Byte) {
        BoltFfiAsync.resume(handle, pollResult)
    }
}

class Engine internal constructor(internal val handle: Long) : AutoCloseable {
    private val __boltffi_closed = java.util.concurrent.atomic.AtomicBoolean(false)

    override fun close() {
        if (__boltffi_closed.compareAndSet(false, true)) {
            Native.boltffi_release_class_demo_engine(handle)
        }
    }

    constructor() : this(new().handle)

    companion object {
        fun new(): Engine {
            return Engine(Native.boltffi_init_class_demo_engine_new())
        }
    }

    suspend fun compute(value: UInt): UInt {
        return boltffiCallAsync(
            createFuture = {
                Native.boltffi_method_class_demo_engine_compute(this.handle, value.toInt())
            },
            poll = { future, contHandle -> Native.boltffi_async_method_class_demo_engine_compute_poll(future, contHandle) },
            complete = { future ->
                Native.boltffi_async_method_class_demo_engine_compute_complete(future).toUInt()
            },
            free = { future -> Native.boltffi_async_method_class_demo_engine_compute_free(future) },
            cancel = { future -> Native.boltffi_async_method_class_demo_engine_compute_cancel(future) },
        )
    }
}
