boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_renders_async_complete_return_shapes.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"exports/async_complete_return_shapes\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo

import kotlinx.coroutines.launch
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_function_demo_refresh(): Long
    @JvmStatic external fun boltffi_async_function_demo_refresh_poll(handle: Long, callback_data: Long): Unit
    @JvmStatic external fun boltffi_async_function_demo_refresh_complete(handle: Long): Unit
    @JvmStatic external fun boltffi_async_function_demo_refresh_cancel(handle: Long): Unit
    @JvmStatic external fun boltffi_async_function_demo_refresh_free(handle: Long): Unit
    @JvmStatic external fun boltffi_async_function_demo_refresh_panic_message(handle: Long): ByteArray?
    @JvmStatic external fun boltffi_function_demo_load_name(): Long
    @JvmStatic external fun boltffi_async_function_demo_load_name_poll(handle: Long, callback_data: Long): Unit
    @JvmStatic external fun boltffi_async_function_demo_load_name_complete(handle: Long): ByteArray?
    @JvmStatic external fun boltffi_async_function_demo_load_name_cancel(handle: Long): Unit
    @JvmStatic external fun boltffi_async_function_demo_load_name_free(handle: Long): Unit
    @JvmStatic external fun boltffi_async_function_demo_load_name_panic_message(handle: Long): ByteArray?
    @JvmStatic external fun boltffi_function_demo_load_point(): Long
    @JvmStatic external fun boltffi_async_function_demo_load_point_poll(handle: Long, callback_data: Long): Unit
    @JvmStatic external fun boltffi_async_function_demo_load_point_complete(handle: Long): ByteArray?
    @JvmStatic external fun boltffi_async_function_demo_load_point_cancel(handle: Long): Unit
    @JvmStatic external fun boltffi_async_function_demo_load_point_free(handle: Long): Unit
    @JvmStatic external fun boltffi_async_function_demo_load_point_panic_message(handle: Long): ByteArray?

    @JvmStatic fun boltffiFutureContinuationCallback(handle: Long, pollResult: Byte) {
        BoltFfiAsync.resume(handle, pollResult)
    }
}


data class Point(
    val x: Int,
    val y: Int
) {
    internal fun toByteArray(): ByteArray {
        val buffer = java.nio.ByteBuffer
            .allocate(STRUCT_SIZE)
            .order(java.nio.ByteOrder.nativeOrder())
        writeTo(buffer, 0)
        return buffer.array()
    }

    internal fun writeTo(buffer: java.nio.ByteBuffer, offset: Int) {
        buffer.putInt(offset, x)
        buffer.putInt(offset + 4, y)
    }

    companion object {
        internal const val STRUCT_SIZE: Int = 8

        internal fun fromByteArray(bytes: ByteArray): Point {
            require(bytes.size == STRUCT_SIZE)
            val buffer = java.nio.ByteBuffer
                .wrap(bytes)
                .order(java.nio.ByteOrder.nativeOrder())
            return fromBuffer(buffer, 0)
        }

        internal fun fromBuffer(buffer: java.nio.ByteBuffer, offset: Int): Point {
            return Point(
                buffer.getInt(offset),
                buffer.getInt(offset + 4)
            )
        }
    }
}

suspend fun refresh() {
    boltffiCallAsync(
        createFuture = {
            Native.boltffi_function_demo_refresh()
        },
        poll = { future, contHandle -> Native.boltffi_async_function_demo_refresh_poll(future, contHandle) },
        complete = { future ->
            Native.boltffi_async_function_demo_refresh_complete(future)
        },
        free = { future -> Native.boltffi_async_function_demo_refresh_free(future) },
        cancel = { future -> Native.boltffi_async_function_demo_refresh_cancel(future) },
    )
}

suspend fun loadName(): String {
    return boltffiCallAsync(
        createFuture = {
            Native.boltffi_function_demo_load_name()
        },
        poll = { future, contHandle -> Native.boltffi_async_function_demo_load_name_poll(future, contHandle) },
        complete = { future ->
            val __boltffi_result = Native.boltffi_async_function_demo_load_name_complete(future) ?: throw IllegalStateException("null buffer returned")
            val __boltffi_reader = WireReader(__boltffi_result)
            __boltffi_reader.readString()
        },
        free = { future -> Native.boltffi_async_function_demo_load_name_free(future) },
        cancel = { future -> Native.boltffi_async_function_demo_load_name_cancel(future) },
    )
}

suspend fun loadPoint(): Point {
    return boltffiCallAsync(
        createFuture = {
            Native.boltffi_function_demo_load_point()
        },
        poll = { future, contHandle -> Native.boltffi_async_function_demo_load_point_poll(future, contHandle) },
        complete = { future ->
            val __boltffi_result = Native.boltffi_async_function_demo_load_point_complete(future) ?: throw IllegalStateException("null buffer returned")
            Point.fromByteArray(__boltffi_result)
        },
        free = { future -> Native.boltffi_async_function_demo_load_point_free(future) },
        cancel = { future -> Native.boltffi_async_function_demo_load_point_cancel(future) },
    )
}
