boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_renders_class_handles_and_associated_callables.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"exports/kotlin_class_handles\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_release_class_demo_engine(handle: Long): Unit
    @JvmStatic external fun boltffi_init_class_demo_engine_new(value: Int): Long
    @JvmStatic external fun boltffi_method_class_demo_engine_version(): Int
    @JvmStatic external fun boltffi_method_class_demo_engine_value(`receiver`: Long): Int
    @JvmStatic external fun boltffi_method_class_demo_engine_swap(`receiver`: Long, other: Long): Long
    @JvmStatic external fun boltffi_method_class_demo_engine_maybe_swap(`receiver`: Long, other: Long): Long
}

class Engine internal constructor(internal val handle: Long) : AutoCloseable {
    private val __boltffi_closed = java.util.concurrent.atomic.AtomicBoolean(false)

    override fun close() {
        if (__boltffi_closed.compareAndSet(false, true)) {
            Native.boltffi_release_class_demo_engine(handle)
        }
    }

    constructor(value: Int) : this(new(value).handle)

    companion object {
        fun new(value: Int): Engine {
            return Engine(Native.boltffi_init_class_demo_engine_new(value))
        }
        fun version(): UInt {
            return Native.boltffi_method_class_demo_engine_version().toUInt()
        }
    }

    fun value(): Int {
        return Native.boltffi_method_class_demo_engine_value(this.handle)
    }

    fun swap(other: Engine): Engine {
        return Engine(Native.boltffi_method_class_demo_engine_swap(this.handle, other.handle))
    }

    fun maybeSwap(other: Engine?): Engine? {
        val __boltffi_handle = Native.boltffi_method_class_demo_engine_maybe_swap(this.handle, other?.handle ?: 0L)
        return if (__boltffi_handle == 0L) null else Engine(__boltffi_handle)
    }
}
