boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_renders_custom_types_through_representations.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"exports/custom_type_functions\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_function_demo_keep_timestamp(value: ByteArray): ByteArray?
}

typealias Timestamp = Long

fun keepTimestamp(value: Long): Long {
    val __boltffi_value_wire = WireWriterPool.acquire(8)
    val __boltffi_value_writer = __boltffi_value_wire.writer
    __boltffi_value_writer.writeI64(value)
    try {
        val __boltffi_result = Native.boltffi_function_demo_keep_timestamp(__boltffi_value_wire.bytes()) ?: throw IllegalStateException("null buffer returned")
        val __boltffi_reader = WireReader(__boltffi_result)
        return __boltffi_reader.readI64()
    } finally {
        __boltffi_value_wire.close()
    }
}
